tests/sources/invalid/generics/generic_class_nested_unclosed_type_args.fire
// Missing closing '>' for a *nested* generic type argument inside a
// generic class instantiation.
class Pair<T, U> {
    T a;
    U b;

    Pair(T a, U b) {
        this.a = a;
        this.b = b;
    }
}

int32 main() {
    Pair<Pair<int32,int32 int32> p = Pair(Pair(1, 2), 3);  //~ ERROR FS-PARSE-0010 @27
//~^ ERROR FS-PARSE-0010 @32
//~^^ ERROR FS-PARSE-0003 @34
    return 0;
}
